[package]
name = "mec"
version = "0.3.0"
edition = "2021"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby/edge compiler cli endpoint"
license = "BSD-3-Clause"
include = [
    "**/*.rs",
    "Cargo.toml",
    "templates/*",
]

[dependencies]
rand = "0.8.5"
nom = "7.1.3"
askama = "0.12.1"
bpaf = "0.9.11"
