[package]
name = "mrubyedge-cli"
version = "0.9.0-rc1"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby/edge cli endpoint - run, compile to wasm, etc."
license = "BSD-3-Clause"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[[bin]]
name = "mrbedge"
path = "src/main.rs"

[dependencies]
clap = { version = ">= 4.5", features = ["derive"] }
mruby-compiler2-sys = "0.1.0"
mrubyedge = { version = "1.0.5" }
