[package]
name = "mrubyedge"
version = "0.1.7"
edition = "2021"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby/edge is yet another mruby that is specialized for running on WASM"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2.15"
plain = "0.2.3"
simple_endian = "0.2.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false