[package]
name = "mrubyedge"
version = "1.0.5"
edition = "2024"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
description = "mruby/edge is yet another mruby that is specialized for running on WASM"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.14", optional = true }
plain = "0.2.3"
simple_endian = "0.3"

[dev-dependencies]
criterion = "0.5.1"
mec-mrbc-sys = "3.3.1"

[[bench]]
name = "benchmark"
harness = false

[features]
default = [ "wasi" ]
wasi = [ "dep:getrandom" ]
no-wasi = []
